terraform/security_groups.tf
# ALB Security Group
resource "aws_security_group" "alb_sg" {
vpc_id = aws_vpc.main.id


ingress {
from_port = 80
to_port = 80
protocol = "tcp"
cidr_blocks = ["0.0.0.0/0"] # Public access
}


egress {
from_port = 0
to_port = 0
protocol = "-1"
cidr_blocks = ["0.0.0.0/0"]
}
}


# ECS Security Group
resource "aws_security_group" "ecs_sg" {
vpc_id = aws_vpc.main.id


ingress {
from_port = 80
to_port = 80
protocol = "tcp"
security_groups = [aws_security_group.alb_sg.id]
}
}


# RDS Security Group
resource "aws_security_group" "rds_sg" {
vpc_id = aws_vpc.main.id


ingress {
from_port = 5432
to_port = 5432
protocol = "tcp"
security_groups = [aws_security_group.ecs_sg.id]
}
}
